traefik-dashboard/resources/traefik-dashboard.ingressroute.traefik.yaml
# Enable access to Traefik dashboard and API
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dashboard
spec:
  routes:
    - kind: Rule
      match: Host(`traefik.homelab.cloud`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: traefik-dashboard-basicauth
